--- a/Behavioural_Cloning.ipynb
+++ b/Behavioural_Cloning.ipynb
@@ -803,6 +803,106 @@
         "colab": {}
       },
       "source": [
+        "def nvidia_model():\n",
+        " \n",
+        "  model = Sequential()\n",
+        "  \n",
+        "  model.add(Conv2D(24, kernel_size=(5,5), strides=(2,2), input_shape=(66,200,3),activation='relu'))\n",
+        "  # 24 here equals to the number of filters required for the first layer of nvidia model, check nvidia layers layout\n",
+        "  model.add(Conv2D(36, kernel_size=(5,5), strides=(2,2), activation='relu'))\n",
+        "  # we set the kernel size as 5*5 and the stride represents that we will consider 2*2 pixels together unlike done earlier\n",
+        "  model.add(Conv2D(48, kernel_size=(5,5), strides=(2,2), activation='relu'))\n",
+        "  model.add(Conv2D(64, kernel_size=(3,3), activation='relu'))\n",
+        "  model.add(Conv2D(64, kernel_size=(3,3), activation='relu'))\n",
+        "  #all the above layers follow the pattern of nvidia layer model, dropout layer is added to randomly set 50% of the input as zero s as to reduce the chances of overfitting\n",
+        "\n",
+        "  model.add(Dropout(0.5))\n",
+        "  \n",
+        "  \n",
+        "  model.add(Flatten())\n",
+        "  model.add(Dense(100, activation='relu'))\n",
+        "  model.add(Dropout(0.5))\n",
+        "  \n",
+        "  \n",
+        "  model.add(Dense(50, activation='relu'))\n",
+        "  model.add(Dense(10, activation ='relu'))\n",
+        "  model.add(Dense(1))\n",
+        "  \n",
+        "  #lr has been set out to be low so that our model turns out to be good\n",
+        "  optimizer= Adam(lr=1e-3)\n",
+        "  model.compile(loss='mse', optimizer=optimizer)\n",
+        "  \n",
+        "  return model"
+      ],
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ItA9-HUcn_I2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 578
+        },
+        "outputId": "90e03b4a-2ec3-4e5b-e9c0-265252c0b2df"
+      },
+      "source": [
+        "model=nvidia_model()\n",
+        "print(model.summary())\n"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_1 (Conv2D)            (None, 31, 98, 24)        1824      \n",
+            "_________________________________________________________________\n",
+            "conv2d_2 (Conv2D)            (None, 14, 47, 36)        21636     \n",
+            "_________________________________________________________________\n",
+            "conv2d_3 (Conv2D)            (None, 5, 22, 48)         43248     \n",
+            "_________________________________________________________________\n",
+            "conv2d_4 (Conv2D)            (None, 3, 20, 64)         27712     \n",
+            "_________________________________________________________________\n",
+            "conv2d_5 (Conv2D)            (None, 1, 18, 64)         36928     \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 1, 18, 64)         0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 1152)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 100)               115300    \n",
+            "_________________________________________________________________\n",
+            "dropout_2 (Dropout)          (None, 100)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 50)                5050      \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 10)                510       \n",
+            "_________________________________________________________________\n",
+            "dense_4 (Dense)              (None, 1)                 11        \n",
+            "=================================================================\n",
+            "Total params: 252,219\n",
+            "Trainable params: 252,219\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zm2WCCMqoU2T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
